fix for fdo#60883 ( macros disabled for documents opened from templates )

Change-Id: I5d4478176bd18a5d7a08dd4472393ea56e1ea280
(cherry picked from commit 4bc42b6d7140144f5e17528276e8ddc80c033d6d)